Complete SignUp logic in http/auth.go
